--- a/devices/climates.yaml
+++ b/devices/climates.yaml
@@ -32,3 +32,20 @@
   initial_hvac_mode: "off"
   away_temp: 18
   precision: 0.1
+- platform: generic_thermostat
+  name: Despatx
+  heater: switch.calefaccio_despatx
+  target_sensor: sensor.sensor_despatx_temperature
+  min_temp: 7
+  max_temp: 25
+  ac_mode: false
+  target_temp: 18.5
+  cold_tolerance: 0.4
+  hot_tolerance: 0.2
+  min_cycle_duration:
+    minutes: 5
+  keep_alive:
+    minutes: 3
+  initial_hvac_mode: "off"
+  away_temp: 18
+  precision: 0.1
