--- a/lovelace/views/00_home/despatx.yaml
+++ b/lovelace/views/00_home/despatx.yaml
@@ -13,19 +13,33 @@ cards:
         padding-top: 10px;
       }
     cards:
-      # - type: custom:layout-card
-      #   layout: horizontal
-      #   min_columns: 5
-      #   max_columns: 5
-      #   column_width: 100px
-      #   justify_content: left
-      #   style: |
-      #     ha-card {
-      #       padding: 10px;
-      #     }
-      #   cards:
-      #     - break
-
+      - type: custom:layout-card
+        layout: horizontal
+        min_columns: 5
+        max_columns: 5
+        column_width: 100px
+        justify_content: left
+        style: |
+          ha-card {
+            padding: 10px;
+          }
+        cards:
+          # - break
+          - template: nest_button_light
+            type: "custom:decluttering-card"
+            variables:
+              - name: Radiador
+              - entity: switch.calefaccio_despatx
+              - icon: "mdi:radiator"
+          - template: nest_button_light
+            type: "custom:decluttering-card"
+            variables:
+              - name: Calefacció
+              - entity: climate.despatx
+              - icon: "mdi:home-thermometer-outline"
+              - state_enabled: "heat"
+              - tap_action:
+                  action: more-info
       - type: custom:mini-graph-card
         entities: 
           - entity: sensor.sensor_despatx_temperature
@@ -36,7 +50,8 @@ cards:
             y_axis: secondary
             show_fill: false
         height: 75
-        animate: true
+        animate: false
+        line_width: 3
         show:
           legend: false
           name: false
