--- a/automations/calefaccio_dormitori/set_18-5_degrees.yaml
+++ b/automations/calefaccio_dormitori/set_18-5_degrees.yaml
@@ -1,21 +1,19 @@
-alias: 'Climate dormitori - Set 19.0 degress'
+alias: 'Calefacció dormitori - Configurar 18.5ºC'
 initial_state: true
 trigger:
   - platform: time
-    at: "21:30:00"
-  - platform: time
-    at: "07:00:00"
+    at: "23:30:00"
   - platform: homeassistant
     event: start
 condition:
-  condition: and
+  condition: or
   conditions:
     - condition: time
-      after: "07:00:00"
+      after: "22:59:00"
     - condition: time
-      before: "23:00:00"
+      before: "01:00:00"
 action:
   - service: climate.set_temperature
     data:
       entity_id: climate.dormitori
-      temperature: 19.5
+      temperature: 18.5
