--- a/automations/calefaccio_dormitori/set_19-0_degrees.yaml
+++ b/automations/calefaccio_dormitori/set_19-0_degrees.yaml
@@ -1,19 +1,21 @@
-alias: 'Climate menjador - Set 18.0 degrees'
+alias: 'Calefacció dormitori - Configurar 19.0ºC'
 initial_state: true
 trigger:
   - platform: time
-    at: "01:00:00"
+    at: "21:30:00"
+  - platform: time
+    at: "07:00:00"
   - platform: homeassistant
     event: start
 condition:
   condition: and
   conditions:
     - condition: time
-      after: "01:00:00"
+      after: "07:00:00"
     - condition: time
-      before: "07:00:00"
+      before: "23:00:00"
 action:
   - service: climate.set_temperature
     data:
-      entity_id: climate.menjador
-      temperature: 18.0
+      entity_id: climate.dormitori
+      temperature: 19.5
