--- a/automations/calefaccio_menjador/set_19-0_degrees.yaml
+++ b/automations/calefaccio_menjador/set_19-0_degrees.yaml
@@ -1,19 +1,24 @@
-alias: 'Climate menjador - Set 18.5 degrees'
+alias: 'Calefacció menjador - Configurar 19.0ºC'
 initial_state: true
 trigger:
+  - platform: sun
+    event: sunset
+    offset: "00:30:00"
   - platform: time
-    at: "23:00:00"
+    at: "19:00:00"
+  - platform: time
+    at: "07:00:00"
   - platform: homeassistant
     event: start
 condition:
   condition: and
   conditions:
     - condition: time
-      after: "22:59:00"
+      after: "07:00:00"
     - condition: time
-      before: "01:00:00"
+      before: "23:00:00"
 action:
   - service: climate.set_temperature
     data:
       entity_id: climate.menjador
-      temperature: 18.5
+      temperature: 19.5
