--- a/configuration.yaml
+++ b/configuration.yaml
@@ -269,3 +269,4 @@ automation: !include_dir_list automations/
 script: !include_dir_merge_named scripts/
 zone: !include zones.yaml
 timer: !include timers.yaml
+calendar: !include calendar.yaml
