--- a/automations/calefaccio_despatx/set_18-0_degrees.yaml
+++ b/automations/calefaccio_despatx/set_18-0_degrees.yaml
@@ -1,19 +1,18 @@
-alias: 'Calefacció dormitori - Configurar 19.0ºC'
+alias: 'Calefacció despatx - Configurar 18.0ºC'
 initial_state: true
 trigger:
   - platform: time
-    at: "07:00:00"
+    at: "17:00:00"
   - platform: homeassistant
     event: start
 condition:
   condition: and
   conditions:
     - condition: time
-      after: "07:00:00"
-    - condition: time
-      before: "08:00:00"
+      after: "15:00:00"
+      before: "06:00:00"
 action:
   - service: climate.set_temperature
     data:
-      entity_id: climate.dormitori
-      temperature: 19.0
+      entity_id: climate.despatx
+      temperature: 18.0
