--- a/automations/calefaccio_despatx/set_19-5_degrees.yaml
+++ b/automations/calefaccio_despatx/set_19-5_degrees.yaml
@@ -1,4 +1,4 @@
-alias: 'Calefacció dormitori - Configurar 19.0ºC'
+alias: 'Calefacció despatx - Configurar 19.5ºC'
 initial_state: true
 trigger:
   - platform: time
@@ -10,10 +10,9 @@ condition:
   conditions:
     - condition: time
       after: "07:00:00"
-    - condition: time
-      before: "08:00:00"
+      before: "15:00:00"
 action:
   - service: climate.set_temperature
     data:
-      entity_id: climate.dormitori
-      temperature: 19.0
+      entity_id: climate.despatx
+      temperature: 19.5
