--- a/automations/calefaccio_dormitori/set_19-5_degrees.yaml
+++ b/automations/calefaccio_dormitori/set_19-5_degrees.yaml
@@ -6,11 +6,10 @@ trigger:
   - platform: homeassistant
     event: start
 condition:
-  condition: and
+  condition: or
   conditions:
     - condition: time
       after: "15:00:00"
-    - condition: time
       before: "23:00:00"
 action:
   - service: climate.set_temperature
