--- a/automations/calefaccio_despatx/turn_off_feiners.yaml
+++ b/automations/calefaccio_despatx/turn_off_feiners.yaml
@@ -2,15 +2,15 @@ alias: 'Calefacció despatx - Apagar (feiners)'
 initial_state: true
 trigger:
   - platform: time
-    at: "16:00:00"
+    at: "13:30:00"
   - platform: state
-    entity_id: switch.calefaccio_menjador
+    entity_id: switch.calefaccio_despatx
     from: "on"
     to: "off"
 condition:
   - condition: time
-    after: "16:00:00"
-    before: "15:00:00"
+    before: "12:00:00"
+    after: "14:00:00"
     weekday:
       - mon
       - tue
