--- a/lovelace/views/99_settings.yaml
+++ b/lovelace/views/99_settings.yaml
@@ -11,7 +11,7 @@ cards:
       - type: custom:layout-card
         layout: vertical
         min_columns: 1
-        max_columns: 1
+        max_columns: 2
         cards:
 
           - template: title_h2
@@ -74,3 +74,86 @@ cards:
                 --zigbee2mqtt-networkmap-node-coordinator-color: rgba(224, 78, 93, .7);
                 --zigbee2mqtt-networkmap-node-router-color: rgba(0, 165, 255, .7);
               }
+
+
+          - break
+
+          - template: title_h2
+            type: "custom:decluttering-card"
+            variables:  
+              - title: "Wifi"
+
+          - type: "custom:vertical-stack-in-card"
+            style: |
+              ha-card {
+                margin-left: 5px;
+                margin-right: 5px;
+                padding-top: 10px;
+              }
+            cards:
+              - type: custom:layout-card
+                layout: vertical
+                min_columns: 2
+                max_columns: 2
+                justify_content: left
+                style: |
+                  ha-card {
+                    padding: 10px;
+                  }
+                cards:
+
+                  - type: markdown
+                    content: |
+                      Qwerty+ (5G)
+                    style: |
+                      ha-card {
+                        border-radius: 0px;
+                        box-shadow: none;
+                        padding: 0px;
+                        margin: 0px;
+                      }
+                      ha-markdown {
+                        padding: 0px !important;
+                        margin-top: 10px;
+                        margin-left: 10px;
+                      }
+
+                  - type: picture
+                    image: /local/Qwerty+-qrcode.png
+                    style: |
+                      ha-card {
+                        border-radius: 0px;
+                        box-shadow: none;
+                        margin: 10px;
+                        width: 150px;
+                        height: 150px;
+                      }
+
+                  - break
+
+                  - type: markdown
+                    content: |
+                      Qwerty (2.4G)
+                    style: |
+                      ha-card {
+                        border-radius: 0px;
+                        box-shadow: none;
+                        padding: 0px;
+                        margin: 0px;
+                      }
+                      ha-markdown {
+                        padding: 0px !important;
+                        margin-top: 10px;
+                        margin-left: 10px;
+                      }
+
+                  - type: picture
+                    image: /local/Qwerty-qrcode.png
+                    style: |
+                      ha-card {
+                        border-radius: 0px;
+                        box-shadow: none;
+                        margin: 10px;
+                        width: 150px;
+                        height: 150px;
+                      }
