--- a/automations/calefaccio_menjador/turn_off_festius.yaml
+++ b/automations/calefaccio_menjador/turn_off_festius.yaml
@@ -1,5 +1,5 @@
 alias: 'Calefacció menjador - Apagar (festius)'
-initial_state: true
+initial_state: false
 trigger:
   - platform: time
     at: "10:00:00"
