--- a/automations/calefaccio_despatx/set_19-5_degrees.yaml
+++ b/automations/calefaccio_despatx/set_19-5_degrees.yaml
@@ -1,5 +1,5 @@
 alias: 'Calefacció despatx - Configurar 19.5ºC'
-initial_state: true
+initial_state: false
 trigger:
   - platform: time
     at: "07:00:00"
