--- a/automations/calefaccio_despatx/turn_off_feiners.yaml
+++ b/automations/calefaccio_despatx/turn_off_feiners.yaml
@@ -1,5 +1,5 @@
 alias: 'Calefacció despatx - Apagar (feiners)'
-initial_state: true
+initial_state: false
 trigger:
   - platform: time
     at: "13:30:00"
