--- a/automations/calefaccio_despatx/turn_on.yaml
+++ b/automations/calefaccio_despatx/turn_on.yaml
@@ -1,5 +1,5 @@
 alias: 'Calefacció despatx - Engegar'
-initial_state: true
+initial_state: false
 
 trigger:
   - platform: time                                                                 ##  Cada dia a les 7.30 (mitja hora abans de començar la jornada)
