--- a/automations/calefaccio_dormitori/set_19-0_degrees.yaml
+++ b/automations/calefaccio_dormitori/set_19-0_degrees.yaml
@@ -1,5 +1,5 @@
 alias: 'Calefacció dormitori - Configurar 19.0ºC'
-initial_state: true
+initial_state: false
 trigger:
   - platform: time
     at: "06:45:00"
