--- a/automations/calefaccio_dormitori/turn_off_feiners.yaml
+++ b/automations/calefaccio_dormitori/turn_off_feiners.yaml
@@ -1,5 +1,5 @@
 alias: 'Calefacció dormitori - Apagar (feiners)'
-initial_state: true
+initial_state: false
 trigger:
   - platform: time
     at: "08:30:00"
