--- a/automations/calefaccio_dormitori/turn_on_feiners.yaml
+++ b/automations/calefaccio_dormitori/turn_on_feiners.yaml
@@ -1,5 +1,5 @@
 alias: 'Calefacció dormitori - Engegar (feiners)'
-initial_state: true
+initial_state: false
 trigger:
   - platform: time
     at: "21:30:00"
