--- a/automations/calefaccio_menjador/set_18-5_degrees.yaml
+++ b/automations/calefaccio_menjador/set_18-5_degrees.yaml
@@ -1,5 +1,5 @@
 alias: 'Calefacció menjador - Configurar 18.5ºC'
-initial_state: true
+initial_state: false
 trigger:
   - platform: time
     at: "23:00:00"
